# ParallaxEditor

./: CMakeLists.txt
source/: ActionStack.cpp  ActionStack.h  FileDialog.cpp  FileDialog.h  Global.cpp  Global.h  MenuBar.cpp  MenuBar.h  Pane.Map.cpp  Pane.Map.h  Pane.Picker.cpp  Pane.Picker.h  ParallaxEditor.cpp  ParallaxEditor.h  Renderer.Tilemap.cpp  Renderer.Tilemap.h  Renderer.Tileset.cpp  Renderer.Tileset.h  Renderer.cpp  Renderer.h  Shortcut.cpp  Shortcut.h  Utils.cpp  Utils.h
